<resources>
    <string name="app_name">Room Coroutines</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finalizar</string>
    <!-- Strings in Start Fragment -->
    <string name="start_title_action_bar">Início</string>
    <string name="text_btn_start_fragment">Next</string>
    <string name="profile_title_action_bar">Perfil</string>
    <!-- Strings in Login Fragment -->
    <string name="login_action_bar_title">Login</string>
    <string name="login_input_layout_hint_username">Nome de Usuário</string>
    <string name="login_input_layout_hint_password">Senha</string>
    <string name="login_button_text_sign_in">Acessar</string>
    <string name="login_button_text_sign_up">Cadastrar-se</string>
    <string name="login_input_layout_error_invalid_username">Nome de usuário inválido</string>
    <string name="login_input_layout_error_invalid_password">Senha inválida</string>
    <string name="login_title_action_bar">Faça seu Login</string>
    <!-- Strings in Profile Fragment -->
    <string name="text_welcome_profile">Welcome, %1$s</string>
    <!-- Strings in Register Fragment -->
    <string name="profile_data_action_bar_title">Insira seus Dados</string>
    <string name="profile_data_input_layout_hint_name">Nome</string>
    <string name="profile_data_input_layout_hint_bio">Bio</string>
    <string name="profile_data_input_layout_error_invalid_name">Nome</string>
    <string name="profile_data_input_layout_error_invalid_bio">Bio inválida</string>
    <!-- Strings in Password Fragment -->
    <string name="choose_credentials_action_bar_title">Insira suas Credenciais</string>
    <string name="choose_credentials_input_layout_hint_username">Nome</string>
    <string name="choose_credentials_input_layout_hint_password">Senha</string>
    <string name="choose_credentials_input_layout_error_invalid_username">Nome inválido</string>
    <string name="choose_credentials_input_layout_error_invalid_password">Senha inválida</string>
    <string name="choose_credentials_text_name">%1$s, insira suas credenciais</string>
</resources>