<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_default_padding"
    tools:context=".ui.fragment.registration.PasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textChooseCredentialsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Fulano, escolha suas credenciais" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutChooseCredentialsUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_margin_top"
        style="@style/AppTextInputLayout"
        android:hint="@string/choose_credentials_input_layout_hint_username">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputChooseCredentialsUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutChooseCredentialsPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_margin_top"
        android:hint="@string/choose_credentials_input_layout_hint_password"
        style="@style/AppTextInputLayout"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputChooseCredentialsPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChooseCredentialsNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forms_default_margin_top"
        android:text="@string/btn_finish" />

</LinearLayout>